--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,13 @@
+:root {
+  --wo-form-width: 50%;
+}
+
+@media (max-width: 600px) {
+  :root {
+    --wo-form-width: 100%;
+  }
+}
+
 body {
   font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -20,6 +30,10 @@ p {
 select {
   height: 30px;
   font-size: 1em;
+  border: 0px;
+  border-bottom: 2px solid red;
+  font-size: 1em;
+  background-color: rgba(255, 33, 81, 0.1);
 }
 
 input[type="text"] {
@@ -33,26 +47,34 @@ input[type="text"]:focus {
   outline: none;
 }
 
-.button-primary {
+button {
   height: 40px;
   font-size: 1.2em;
   font-weight: 700;
-  background-color: blue;
-  color: #ffff;
   cursor: pointer;
 }
 
-.button-primary:hover {
+.button-primary {
+  background-color: blue;
+  color: #ffff;
+}
+
+button:hover {
   background-color: red;
 }
 
 .workout-form {
   border: 1px solid red;
-  width: 50%;
+  width: var(--wo-form-width);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 10;
+  top: 0;
+  left: 50%;
+  transform:translateX(-50%);
+  position: absolute;
 }
 
 .workout-form-header {
@@ -68,8 +90,14 @@ input[type="text"]:focus {
 }
 
 .workout-form-footer {
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding: 12px;
+}
+
+.workout-form-footer > * {
+  margin: 10px;
 }
 
 .rep-item {
@@ -83,13 +111,19 @@ input[type="text"]:focus {
   background-color: rgba(255, 33, 81, 0.1);
 }
 
+.rep-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .rep-button {
   padding: 0;
   border: none;
   background-color: white;
   cursor: pointer;
   align-items: flex-end;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .input-container {
